--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 
 # misc
 .DS_Store
+.env
 .env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -21,3 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# vercel
+.vercel
