--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
