--- a/package.json
+++ b/package.json
@@ -33,13 +33,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "country-telephone-data": "^0.6.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "shopify-buy": "^2.22.0",
+    "vercel": "^39.2.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
